--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,5 +1,3 @@
-# This is the resource bundle for Worklist
-
 #XTIT: Application name
 appTitle=Worklist
 
@@ -7,56 +5,31 @@ appTitle=Worklist
 appDescription=
 
 #~~~ Worklist View ~~~~~~~~~~~~~~~~~~~~~~~~~~
-#XTIT: Worklist view title
-worklistViewTitle=Manage <zjblessons_base_HeadersPlural>
 
 #XTIT: Worklist page title
-worklistTitle=Worklist
+worklistTitle=Worklist page
 
 #XTIT: Table view title
 worklistTableTitle=Worklist table
 
-#XTOL: Tooltip for the search field
-worklistSearchTooltip=Enter an <zjblessons_base_Headers> name or a part of it.
-
-#XBLI: text for a table with no data with filter or search
-worklistNoDataWithSearchText=No matching <zjblessons_base_HeadersPlural> found
-
-#XTIT: Table view title with placeholder for the number of items
-worklistTableTitleCount=Worklist table ({0})
+#XTOL: Tooltip for the search fields
+worklistSearchTooltipDNumber=Search on Document Number
+worklistSearchTooltipPText=Search on Plant Text
 
 #XTIT: The title of the column containing the DocumentNumber of zjblessons_base_Headers
-tableDocumentNumberTitle=DocumentNumber
-tableDocumentDateTitle=DocumentDate
-tablePlantTextTitle=PlantText
+tableDocumentNumberTitle=Document Number
+tableDocumentDateTitle=Document Date
+tablePlantTextTitle=Plant Text
 tableDescriptionTitle=Description
 tableCreatedTitle=Created
-
-#XBLI: text for a table with no data
-tableNoDataText=No <zjblessons_base_HeadersPlural> are currently available
 
 #XLNK: text for link in 'not found' pages
 backToWorklist=Show Worklist
 
 #~~~ Object View ~~~~~~~~~~~~~~~~~~~~~~~~~~
-#XTIT: Object view title
-objectViewTitle=<zjblessons_base_Headers> Details
 
 #XTIT: Object page title
 objectTitle=<zjblessons_base_Headers>
-
-
-#XTIT: Label for the DocumentNumber
-DocumentNumberLabel=DocumentNumber
-
-
-#~~~ Share Menu Options ~~~~~~~~~~~~~~~~~~~~~~~
-
-#XTIT: Send E-Mail subject
-shareSendEmailWorklistSubject=<Email subject PLEASE REPLACE ACCORDING TO YOUR USE CASE>
-
-#YMSG: Send E-Mail message
-shareSendEmailWorklistMessage=<Email body PLEASE REPLACE ACCORDING TO YOUR USE CASE>\r\n{0}
 
 #XTIT: Send E-Mail subject
 shareSendEmailObjectSubject=<Email subject including object identifier PLEASE REPLACE ACCORDING TO YOUR USE CASE> {0}
@@ -72,9 +45,6 @@ notFoundTitle=Not Found
 
 #YMSG: The zjblessons_base_Headers not found text is displayed when there is no zjblessons_base_Headers with this id
 noObjectFoundText=This <zjblessons_base_Headers> is not available
-
-#YMSG: The zjblessons_base_Headers not available text is displayed when there is no data when starting the app
-noObjectsAvailableText=No <zjblessons_base_HeadersPlural> are currently available
 
 #YMSG: The not found text is displayed when there was an error loading the resource (404 error)
 notFoundText=The requested resource was not found
