--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,9 +6,6 @@ appDescription=
 
 #~~~ Worklist View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-#XTIT: Worklist page title
-worklistTitle=Worklist page
-
 #XTIT: Table view title
 worklistTableTitle=Worklist table
 
@@ -53,3 +50,5 @@ notFoundText=The requested resource was not found
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+
+declineIcon=sap-icon://decline
