3. Refresh button created

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -52,3 +52,4 @@ notFoundText=The requested resource was not found
 errorText=Sorry, a technical error occurred! Please try again later.
 
 declineIcon=sap-icon://decline
+refreshIcon=sap-icon://refresh
