--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -17,6 +17,7 @@ worklistSearchTooltipPText=Search on Plant Text
 tableDocumentNumberTitle=Document Number
 tableDocumentDateTitle=Document Date
 tablePlantTextTitle=Plant Text
+tableRegionTextTitle=Region Text
 tableDescriptionTitle=Description
 tableCreatedTitle=Created
 
@@ -53,3 +54,9 @@ errorText=Sorry, a technical error occurred! Please try again later.
 
 declineIcon=sap-icon://decline
 refreshIcon=sap-icon://refresh
+addIcon=sap-icon://add
+
+createDialogTitle=Create header
+cancel=Cancel
+save=Save
+toastCreated=Created
