--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -55,8 +55,13 @@ errorText=Sorry, a technical error occurred! Please try again later.
 declineIcon=sap-icon://decline
 refreshIcon=sap-icon://refresh
 addIcon=sap-icon://add
+allIcon=sap-icon://form
+deactivatedIcon=sap-icon://alert
 
 createDialogTitle=Create header
 cancel=Cancel
 save=Save
 toastCreated=Created
+filterAll=All
+filterDeactivated=Deactivated
+deleteNotAllowed=Not allowed to delete an active object
