5. IconTabBar added to Object view

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -57,6 +57,7 @@ refreshIcon=sap-icon://refresh
 addIcon=sap-icon://add
 allIcon=sap-icon://form
 deactivatedIcon=sap-icon://alert
+listIcon=sap-icon://list
 
 createDialogTitle=Create header
 cancel=Cancel
@@ -64,4 +65,6 @@ save=Save
 toastCreated=Created
 filterAll=All
 filterDeactivated=Deactivated
-deleteNotAllowed=Not allowed to delete an active object
+deleteNotAllowed=Not allowed to delete an active object 
+objectList=List
+objectForm=Form
