6. Toolbar buttons added

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -52,12 +52,6 @@ notFoundText=The requested resource was not found
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
 
-declineIcon=sap-icon://decline
-refreshIcon=sap-icon://refresh
-addIcon=sap-icon://add
-allIcon=sap-icon://form
-deactivatedIcon=sap-icon://alert
-listIcon=sap-icon://list
 
 createDialogTitle=Create header
 cancel=Cancel
@@ -68,3 +62,16 @@ filterDeactivated=Deactivated
 deleteNotAllowed=Not allowed to delete an active object 
 objectList=List
 objectForm=Form
+objectEdit=Edit
+objectDelete=Delete
+
+#ICONS
+declineIcon=sap-icon://decline
+refreshIcon=sap-icon://refresh
+addIcon=sap-icon://add
+allIcon=sap-icon://form
+deactivatedIcon=sap-icon://alert
+listIcon=sap-icon://list
+editIcon=sap-icon://edit
+deleteIcon=sap-icon://delete
+backIcon=sap-icon://nav-back
