--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -64,6 +64,7 @@ objectList=List
 objectForm=Form
 objectEdit=Edit
 objectDelete=Delete
+objectEditMode=Edit Mode
 
 #ICONS
 declineIcon=sap-icon://decline
