--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,6 +20,11 @@ tablePlantTextTitle=Plant Text
 tableRegionTextTitle=Region Text
 tableDescriptionTitle=Description
 tableCreatedTitle=Created
+formVersion=Version
+formCreatedByFullNameTitle=Created By Full Name
+formModifiedTitle=Modified
+formModifiedByFullNameTitle=Modified By Full Name
+formHeaderID=HeaderID
 
 #XLNK: text for link in 'not found' pages
 backToWorklist=Show Worklist
